Set input font size to 16px to prevent zoom behavior on ios

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
+input, button {
+  font-size: 1rem;
+}
+
 
 #app {
   display: flex;
